--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,8 @@
 	required = true
 	clean = git-lfs clean -- %f
 [user]
-	name = xxxxx
-	email = xxxxx
+	name = 'William Liebenberg [Microsoft MVP]'
+	email = 'awliebenberg@outlook.com'
 [init]
 	defaultbranch = main
 [push]
